# ipstruct-rs

./: Cargo.toml  README.md
examples/: blocking_lookup.rs  lookup.rs
src/: client.rs  ipinfo.rs  lib.rs  setting.rs
