[package]
name = "ipstruct"
version = "0.1.0"
edition = "2021"
description = "Rust client library for the IPStruct"
authors = ["shellrow <shellrow@foctet.com>"]
repository = "https://github.com/shellrow/ipstruct-rs"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
