[package]
name = "ipstruct"
version = "0.2.0"
edition = "2021"
description = "Rust client library for the IPStruct"
authors = ["shellrow <shellrow@foctet.com>"]
repository = "https://github.com/shellrow/ipstruct-rs"
readme = "README.md"
keywords = ["network", "ip", "geolocation", "ipinfo"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "socks"] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "lookup"
path = "examples/lookup.rs"

[[example]]
name = "blocking_lookup"
path = "examples/blocking_lookup.rs"
